--- a/config/logging.conf
+++ b/config/logging.conf
@@ -8,18 +8,18 @@ keys=stream_handler,file_handler
 keys=formatter
 
 [logger_root]
-level=INFO
+level=DEBUG
 handlers=stream_handler,file_handler
 qualname=Root
 
 [logger_telegram]
-level=INFO
+level=DEBUG
 handlers=stream_handler,file_handler
 qualname=Telegram
 
 [handler_stream_handler]
 class=StreamHandler
-level=INFO
+level=DEBUG
 formatter=formatter
 args=(sys.stderr,)
 
